# winpthread-build-with-MinGW

./: README.md  build_32_64.bat
winpthreads/: CMakeLists.txt
